# spark-benchmark

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  README.txt  pyproject.toml
.cursor/rules/: fixtures-and-configs.mdc  project-overview.mdc  python-conventions.mdc
.github/workflows/: ci.yml
configs/backends/: llamacpp.yaml  ollama.yaml  trt-llm.yaml
configs/experiments/: spark-code-generation.yaml  spark-llamacpp-baseline.yaml  spark-ollama-baseline.yaml  spark-quant-sweep.yaml  spark-sustained.yaml  spark-trt-reliability.yaml
configs/models/: gemma-4-q4.yaml  gemma-4-q8.yaml  gemma-4.yaml  nemotron-3-q4.yaml  nemotron-3-q8.yaml  nemotron-3-super.yaml  nemotron-3.yaml  qwen-3.6-q4.yaml  qwen-3.6-q8.yaml  qwen-3.6.yaml
data/code/: code_generation_v1.json  reference_scores.yaml
data/long_context/: long_context_retrieval_v1.json
data/performance/: openclaw_speed_v1.json  sustained_throughput_v1.json
data/practical/: practical_structured_output_v1.json
docs/: README.md  architecture.md  custom-tests-spec.md  extensions-spec.md  long-context-spec.md  quantization-sweep-spec.md
results/: demo-report.md
scripts/: fetch_haystacks.sh  probe_long_context.py  probe_refusal.py  release.sh
tests/: test_backend_registry.py  test_code_generation.py  test_config_loading.py  test_custom_suites.py  test_long_context.py  test_model_registry.py  test_orchestration.py  test_quant_sweep.py  test_quick.py  test_reliability.py  test_reporting_html.py  test_shell.py  test_sustained_throughput.py
(+40 files in other folders)
