[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-benchmark"
version = "0.1.0"
description = "Reproducible local LLM benchmark harness for NVIDIA DGX Spark"
readme = {file = "docs/README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
spark-bench = "spark_benchmark.cli:app"
spark_benchmark = "spark_benchmark.cli:shell_entrypoint"
spark-benchmark = "spark_benchmark.cli:shell_entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
